--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.6",
+    "@mantine/hooks": "^4.2.6",
+    "@mantine/ssr": "^4.2.6",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
