--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@remix-run/react": "^1.5.1",
     "@remix-run/vercel": "^1.5.1",
     "@vercel/node": "^1.15.2",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.5.1",
